<resources>
    <string name="app_name">Telegram Changer</string>
    <string name="package_name">Package Name</string>
    <string name="generate_package_name">Generate Package Name</string>
    <string name="apk_file">Unselected !</string>
    <string name="select">Select</string>
    <string name="generate">Generate</string>
    <string name="or">or</string>
    <string name="download">Download</string>
    <string name="about">About</string>
    <string name="telegram_official_telegram_org">Telegram (Official) : telegram.org</string>
    <string name="telegram_foss_f_droid">Telegram FOSS : F-Droid</string>
    <string name="neko_x_f_droid">Neko X : F-droid</string>
    <string name="source_link">From:</string>
    <string name="about_main">This app was created under the terms of the GNU General Public License.
        For more information please check out the link below: </string>
    <string name="gnu_link" translatable="false">https://www.gnu.org/licenses/gpl-3.0.en.html</string>
    <string name="about_version">Version: </string>
    <string name="get_write_permission">Please give the permission to read to the storage.</string>
    <string name="downloading">Downloading…</string>
    <string name="main_loading">Generating…</string>
    <string name="generate_error_no_apk">No APK!</string>
    <string name="generate_select_error">Please select the output file path.</string>
    <string name="package_label">App Name</string>
    <string name="generate_package_label" translatable="false">generate_pkg_label</string>
    <string name="download_complete">download completed!</string>
    <string name="main_input_hint">Please Input.</string>
    <string name="main_package_name_error">Package name incorrect. Example: com.xxx.xxx.</string>
    <string name="generate_success">Generate Success!</string>
    <string name="about_lib_header">Thanks:</string>
    <string name="library_1" translatable="false">https://github.com/jhy/jsoup (MIT License)</string>
    <string name="library_2" translatable="false">https://github.com/kittinunf/fuel (MIT License)</string>
    <string name="library_3" translatable="false">https://github.com/topjohnwu/Magisk (GPL 3.0)</string>
    <string name="generate_error_out_file_name">Not a .apk file.</string>
    <string name="selected">Selected !</string>
</resources>